fixed overlapping issue on skills page

--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@
   height: 100vh;
 }
 
+.section{
+  padding-top: 6.5rem;
+  padding-bottom: 6.5rem;
+}
+
 
 
 
